Align legend and explore buttons, make same height. Fixes #147

--- a/src/scss/_probes.scss
+++ b/src/scss/_probes.scss
@@ -1,10 +1,11 @@
-$hint-probe-height: 36px;
+
 
 .probe-hint-container {
   position: absolute;
   right: 30px;
   border-radius: 0px;
-  top: 136px;
+  // top: 136px;
+  top: $header-height + $timeline-height + $legend-toggle-top + 1;
   background-color: rgba(51, 51, 51, .9);
   box-shadow: 0 0 8px rgba(0,0,0,.25);
   height: $hint-probe-height;
@@ -248,7 +249,7 @@ $hint-probe-height: 36px;
   font-size: $standard-icon-size;
   right: 30px;
   border-radius: 5px;
-  top: 135px;
+  top: $header-height + $timeline-height + $legend-toggle-top;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 0px;
