--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,6 +12,8 @@ $search-input-height: 60px;
 $header-height: 70px;
 $timeline-height: 50px;
 
+$legend-toggle-top: 20px;
+
 $mobile-header-height: 50px;
 $mobile-search-height: 60px;
 
@@ -19,3 +21,6 @@ $legend-toggle-mobile-top: 110px;
 $legend-toggle-mobile-size: 15px;
 
 $standard-icon-size: 16px;
+$probe-button-height: 38px;
+
+$hint-probe-height: 38px;
